feat(content): added link to Learn More about the project via the repo readme

--- a/bulletpress/public/index.html
+++ b/bulletpress/public/index.html
@@ -55,7 +55,6 @@
             <button id="btn-show-tutorial" style="display: none;"></button>
             <img src="icons/icon-help.png" alt="Tutorial Toggle Button" style="height: 100%;" title="Show Tutorial">
           </label>
-          <span id="guidearrow-tutorial" title="START HERE" class="flasher hide"><i>&larr;</i></span>
         </span>
       </div>
       <div id="tutorial" class="accordion">
@@ -324,7 +323,11 @@
                   Request a Feature
                 </a>
               </li>
-              <li><br></li>
+              <li>
+                <a target="_blank" href="https://github.com/codejedi365/bulletpress/blob/v0.0.0-semantically-versioned/README.md">
+                  Learn more...
+                </a>
+              </li>
               <li><br></li>
             </ul>
           </div>
