--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icons/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="color-scheme" content="dark light" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,7 +23,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta name="application-name" content="Performance-Press" />
+    <meta
+      name="description"
+      content="An interactive Air Force Performance Report (OPR/EPR) editor"
+    />
+    <meta name="publisher" content="GitHub Pages" />
+    <meta name="robots" content="all,noarchive" />
+    <meta name="keywords" content="Air,Force,EPR,OPR,writing,style,bullet,narrative,performance,report" />
+    <!-- TODO: remove these links -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/theme.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/index.css" />
+    <script src="%PUBLIC_URL%/js/main.js"></script>
+    <script src="%PUBLIC_URL%/js/wordsearch.js"></script>
+    <!-- TODO --- end block -->
+    <title>Performance-Press | Interactive Report Editor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
